style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --color-white: #fff;

  --stone-bg: #f3e6d8ff;
  --stone-primary: #e4ded8ff;
  --stone-secondary: #5f574eff;
  --stone-heading: #302d2cff;

  --brown-heading-primary: #854632ff;

  --rose-heading-secondary: #7b284fff;
  --rose-bg: #fff7fb;

  --rose-bg-dark: #fdeaf3;

  --border-line-primary: #ddd;
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Young Serif", sans-serif;
  background-color: var(--stone-bg);

  display: flex;
  justify-content: center;
}

.card {
  max-width: 73.6rem;
  margin: 12.8rem auto;
  padding: 4rem;
  background-color: var(--rose-bg);
  text-align: center;

  border-radius: 2.4rem;
}

.hero {
  display: block;
  max-width: 100%;
  height: auto;

  border-radius: 1.2rem;
  margin-block-end: 3.6rem;
}

.header-box {
  width: 100%;
  margin-top: -0.4rem;
  margin-block-end: 3.2rem;
}

.title {
  color: var(--stone-heading);
  text-align: left;
  font-size: 4rem;
  line-height: 1;
  font-weight: 500;

  margin-block-end: 2.4rem;
}

.description {
  color: var(--stone-secondry);
  font-family: "Outfit", sans-serif;
  font-size: 1.6rem;
  line-height: 1.5;
  font-weight: 300;
  text-align: left;

  margin-block-end: 3.2rem;
}

.preparation {
  background-color: var(--rose-bg-dark);
  text-align: left;

  padding: 2.4rem;

  margin-block-end: 3.2rem;
}

.preparation-heading {
  color: var(--rose-heading-secondry);
  font-size: 2rem;
  line-height: 1;
  font-weight: 500;
  font-family: "Outfit", sans-serif;
  margin-top: 0;
  margin-right: 2.4rem;
  margin-block-end: 1.6rem;
  margin-left: 2.4rem;
}

.steps {
  margin-left: 4.8rem;
  color: var(--rose-heading-secondry);
  line-height: 1.5;
}

.step span {
  color: var(--stone-secondry);
  font-size: 1.6rem;
  font-weight: 700;
  font-family: "Outfit", sans-serif;
}

.step {
  color: var(--stone-secondry);
  padding-left: 1.6rem;
  padding-bottom: 0.8rem;
  font-size: 1.6rem;
  font-weight: 300;
  font-family: "Outfit", sans-serif;

  text-align: left;
  margin-left: -0.6rem;
}

.step::marker {
  color: var(--rose-heading-secondry);
  margin-left: 0.8rem;
  left: 1rem;
}

.ingredients,
.instructions {
  background-color: var(--rose-bg);
  text-align: left;
  padding: 0;

  margin-block-end: 2.4rem;
}

.instructions,
.nutritions {
  margin-block-start: 2.2rem;
}

hr {
  border: none;
  height: 0.1rem;
  background-color: var(--border-line-primary);
}

.ingredients-heading,
.instructions-heading,
.nutritions-heading {
  color: var(--brown-heading-primary);
  font-family: inherit;
  font-size: 2.8rem;
  font-weight: 500;
  text-align: left;
  padding-top: -1.2rem;
  margin-block-end: 2.8rem;
}

.nutritions-heading {
  margin-bottom: 2.4rem;
}
/* ======================================================= */
.ings,
.inst-list {
  margin-left: -1.6rem;
  margin-top: -1rem;
  color: var(--rose-heading-secondry);
  line-height: 1.5;
  padding-left: 3.2rem;
}

.inst span {
  color: var(--stone-secondry);
  font-size: 1.6rem;
  font-weight: 700;
  font-family: "Outfit", sans-serif;
  margin-left: 1.2rem;
}

.ing,
.inst {
  color: var(--stone-secondry);

  padding-bottom: 0.8rem;
  font-size: 1.6rem;
  font-weight: 300;
  font-family: "Outfit", sans-serif;
}

.ing::marker,
.inst::marker {
  color: var(--rose-heading-secondry);
  margin-left: 0.8rem;
  left: 1rem;

  font-weight: 600;
  font-family: "Outfit", sans-serif;
}

.nutrition-description {
  color: var(--stone-secondry);
  font-family: "Outfit", sans-serif;
  font-size: 1.6rem;
  line-height: 1.5;
  font-weight: 300;
  text-align: left;
  line-height: 1.5;

  margin-block-end: 2rem;
}

table {
  width: 100%;
}

.nutrition-row:last-child td {
  margin-block-end: 5rem;
  border-bottom: none;
}

.nutrition,
.nutrition-amount {
  color: var(--stone-secondry);
  font-family: "Outfit", sans-serif;
  font-size: 1.4rem;
  font-weight: 400;
  text-align: left;
  padding-left: 2.4rem;
  padding-right: 20rem;
  padding-bottom: 1rem;
  padding-top: 1rem;
  border-bottom: 1px solid #ddd;
}

.nutrition-amount {
  color: var(--rose-heading-secondry);
  font-weight: 600;
  text-align: left;
}

